--- a/deployment/build.xml
+++ b/deployment/build.xml
@@ -99,10 +99,10 @@
 	
 <!-- Retrieve an unpackaged set of metadata from your org -->
     <!-- The file unpackaged/package.xml lists what is to be retrieved -->
-    <target name="retrieveUnpackagedStatic">
+    	<target name="retrieveUnpackagedStatic">
       <mkdir dir="retrieveUnpackagedstatic"/>
       <!-- Retrieve the contents into another directory -->
-      <sf:retrieve username="${sf.username}"
+      <sf:retrieve 	  username="${sf.username}"
 			  password="${sf.password}"
 			  sessionId="${sf.sessionId}"
 			  serverurl="${sf.serverurl}"
@@ -110,20 +110,9 @@
 			  pollWaitMillis="${sf.pollWaitMillis}"
 			  retrieveTarget="retrieveUnpackagedStatic"
 			  unpackaged="static/package.xml"/>
-    </target>	
+    	</target>	
 	
 
-<!-- Shows quick deployment of recent validation. Set the property sf.recentValidationId to your recent check only deployment Id -->
-	<target name="quickDeploy">
-	  <sf:deployRecentValidation 
-				username="${sf.username}"
-				password="${sf.password}"
-				sessionId="${sf.sessionId}" 
-				serverurl="${sf.serverurl}"
-				maxPoll="${sf.maxPoll}"
-				pollWaitMillis="${sf.pollWaitMillis}"				
-				recentValidationId="${sf.recentValidationId}"/>
-	</target>
 	
 	<!-- quick deployment of recent validation. Set property sf.requestId to Id of pending or in progress deploy request -->
 	<target name="cancelDeploy">
@@ -136,78 +125,15 @@
 				pollWaitMillis="${sf.pollWaitMillis}"
 				requestId="${sf.requestId}"/>
 	</target>	
-
 	
-    <!-- Test out deploy and retrieve verbs for package 'mypkg' -->
-    <target name="test">
-      <!-- Upload the contents of the "mypkg" package -->
-      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="mypkg" rollbackOnError="true"/>
-      <mkdir dir="retrieveOutput"/>
-      <!-- Retrieve the contents into another directory -->
-      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="retrieveOutput" packageNames="MyPkg"/>
-    </target>   
-
-    <!-- Retrieve all the items of a particular metadata type -->
-    <target name="bulkRetrieve">
-      <sf:bulkRetrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" metadataType="${sf.metadataType}" retrieveTarget="retrieveUnpackaged"/>
-    </target>
-
-    <!-- Retrieve metadata for all the packages specified under packageNames -->
-    <target name="retrievePkg">
-      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="retrieveOutput" packageNames="${sf.pkgName}"/>
-    </target>
-
-    <!-- Deploy the unpackaged set of metadata retrieved with retrieveUnpackaged and run tests in this organization's namespace only-->
-    <target name="deployUnpackaged">
-      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="retrieveUnpackaged" rollbackOnError="true"/>
-    </target>
-
-    <!-- Deploy a zip of metadata files to the org -->
-    <target name="deployZip">
-      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" zipFile="${sf.zipFile}" pollWaitMillis="1000" rollbackOnError="true"/>
-    </target>  
-	
-	 <!-- Shows deploying code with no TestLevel sepcified -->
-    <target name="deployCodeNoTestLevelSpecified">
-      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="codepkg" rollbackOnError="true"/>
-    </target>
-	
-	<!-- Shows deploying code and running tests only within the org namespace -->
-	<target name="deployCodeRunLocalTests">
-	  <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="codepkg" rollbackOnError="true"  testlevel="RunLocalTests"/>
-	</target>
-	
-    <!-- Shows removing code; only succeeds if done after deployCode -->
-    <target name="undeployCode">
-      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="removecodepkg"/>
-    </target>
-
-    <!-- Shows retrieving code; only succeeds if done after deployCode -->
-    <target name="retrieveCode">
-      <!-- Retrieve the contents listed in the file codepkg/package.xml into the codepkg directory -->
-      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="codepkg" unpackaged="codepkg/package.xml"/>
-    </target>
-
-    <!-- Shows deploying code, running all tests, and running tests (1 of which fails), and logging. -->
-    <target name="deployCodeFailingTest">
-      <!-- Upload the contents of the "codepkg" package, running all tests -->
-      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="codepkg" testLevel="RunAllTestsInOrg" rollbackOnError="true" logType="Debugonly"/>
-    </target>
-
-    <!-- Shows check only; never actually saves to the server -->
-    <target name="deployCodeCheckOnly">
-      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="codepkg" checkOnly="true"/>
-    </target>
-	
-
-	<!-- Retrieve the information of all items of a particular metadata type -->
-    <target name="listMetadata">
-      <sf:listMetadata username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" metadataType="${sf.metadataType}"/>
-    </target>
-
-	<!-- Retrieve the information on all supported metadata type -->
-    <target name="describeMetadata">
-      <sf:describeMetadata username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}"/>
-    </target>
+	<!-- Shows removing code; only succeeds if done after deployCode -->
+    	<target name="undeployCode">
+      	<sf:deploy 		username="${sf.username}" 
+				password="${sf.password}" 
+		 		sessionId="${sf.sessionId}" 
+		 		serverurl="${sf.serverurl}" 
+		 		maxPoll="${sf.maxPoll}" 
+		 		deployRoot="removecodepkg"/>
+    	</target>
 </project>
 
