--- a/deployment/build.xml
+++ b/deployment/build.xml
@@ -10,7 +10,13 @@
     <condition property="sf.username" value=""> <not> <isset property="sf.username"/> </not> </condition>
     <condition property="sf.password" value=""> <not> <isset property="sf.password"/> </not> </condition>
     <condition property="sf.sessionId" value=""> <not> <isset property="sf.sessionId"/> </not> </condition>
-
+    <record name="deploymentLog.log" loglevel="info" append="yes"/>
+	<echo>Running against:
+	    ${sf.environment}
+	    ${sf.serverurl}
+	    ${sf.username}
+	</echo>
+	
     <taskdef resource="com/salesforce/antlib.xml" uri="antlib:com.salesforce">
         <classpath>
             <pathelement location="../ant-salesforce.jar" />        	
@@ -19,19 +25,27 @@
 	
 	
 	
- <!-- Running "ant deploy" would perform all the action as mentioned-->
+ 	<!-- Running "ant deploy" would perform all the action as mentioned-->
     <target name="deploy">
-   
-	  <echo>Retrieving backup using the package.xml in "src"</echo>
-        <antcall target="retrieveUnpackaged" />
-		 <echo>Retrieving backup using the static/package.xml</echo>
-        <antcall target="retrieveUnpackagedStatic" />
-	  <echo>Performing code verification to the target sandbox</echo>
-		<antcall target="deployCodeVerify" />
-	  <echo>Performing code Deployment to the target sandbox</echo>	
-		<antcall target="deployCode" />
+   		<echo>Starting the Deployment Process with Static Backup</echo>
+        	<antcall target="retrieveUnpackaged" />
+		<echo>Retrieving backup using the static/package.xml</echo>
+	        <antcall target="retrieveUnpackagedStatic" />
+	  	<echo>Performing code verification to the target sandbox</echo>
+			<antcall target="deployCodeVerify" />
+	  	<echo>Performing code Deployment to the target sandbox</echo>	
+			<antcall target="deployCode" />
     </target>	
 
+	<!-- Running "antdeploy_nostatic" would perform all the action (minus "static" backup)-->
+    <target name="deploy_nostatic">
+   		<echo>Starting the Deployment Process Without Static Backup</echo>
+        	<antcall target="retrieveUnpackaged" />
+		<echo>Performing code verification to the target sandbox</echo>
+			<antcall target="deployCodeVerify" />
+	  	<echo>Performing code Deployment to the target sandbox</echo>	
+			<antcall target="deployCode" />	
+    </target>
 
 <!-- RunAllTestsInOrg, RunSpecifiedTests, RunLocalTests -->
 
